#9 Fixed namespace and prefix

--- a/docs/api-reference/CRMScript.NetServer.NSAIAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAIAgent.yml
@@ -95,13 +95,13 @@ items:
   summary: "\nCalling the HugoAI endpoint to fetch the current training status.\n"
   remarks: 
   syntax: 
-    content: CategorizationStatusResponse GetTrainingStatus()
+    content: NSCategorizationStatusResponse GetTrainingStatus()
     parameters: []
     return:
-      type: CRMScript.Native.CategorizationStatusResponse
+      type: CRMScript.NetServer.NSCategorizationStatusResponse
       description: Carrier to describe the current status of HugoAI categorization.
   example: 
-  - "\n<pre><code>NSAIAgent agent;\nCategorizationStatusResponse res = agent.GetTrainingStatus();</code></pre>\n"
+  - "\n<pre><code>NSAIAgent agent;\nNSCategorizationStatusResponse res = agent.GetTrainingStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAIAgent.GuessCategory(Integer)
   commentId: M:CRMScript.NetServer.NSAIAgent.GuessCategory(Integer)
   id: 'GuessCategory(Integer)'
@@ -113,7 +113,7 @@ items:
   fullName: CRMScript.NetServer.NSAIAgent.GuessCategory(Integer)
   type: Method
   summary: "\nGiven a ticket's ID, guess the ticket category it should be placed in.\n"
-  remarks: "\n Currently this is based on the first message in the ticket.\n"
+  remarks: "\nCurrently this is based on the first message in the ticket.\n"
   syntax: 
     content: Integer GuessCategory(Integer ticketId)
     parameters:
@@ -199,12 +199,12 @@ references:
   name: NSSentiment
   nameWithType: NSSentiment
   fullName: CRMScript.NetServer.NSSentiment
-- uid: CRMScript.Native.CategorizationStatusResponse
-  commentId: T:CRMScript.Native.CategorizationStatusResponse
+- uid: CRMScript.NetServer.NSCategorizationStatusResponse
+  commentId: T:CRMScript.NetServer.NSCategorizationStatusResponse
   isExternal: true
-  name: CategorizationStatusResponse
-  nameWithType: CategorizationStatusResponse
-  fullName: CRMScript.Native.CategorizationStatusResponse
+  name: NSCategorizationStatusResponse
+  nameWithType: NSCategorizationStatusResponse
+  fullName: CRMScript.NetServer.NSCategorizationStatusResponse
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
