--- a/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
@@ -91,10 +91,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: ProviderInfo[] GetPlugins()
+    content: NSProviderInfo[] GetPlugins()
     parameters: []
     return:
-      type: CRMScript.Native.ProviderInfo[]
+      type: CRMScript.NetServer.NSProviderInfo[]
   example: 
 - uid: CRMScript.NetServer.NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
   commentId: M:CRMScript.NetServer.NSMessagingAgent.SendMessages(String,NSOutgoingMessage[])
@@ -232,26 +232,26 @@ references:
   name: NSMessageDeliveryStatus
   nameWithType: NSMessageDeliveryStatus
   fullName: CRMScript.NetServer.NSMessageDeliveryStatus
-- uid: CRMScript.Native.ProviderInfo[]
+- uid: CRMScript.NetServer.NSProviderInfo[]
   isExternal: true
-  name: ProviderInfo[]
-  nameWithType: ProviderInfo[]
-  fullName: CRMScript.Native.ProviderInfo[]
+  name: NSProviderInfo[]
+  nameWithType: NSProviderInfo[]
+  fullName: CRMScript.NetServer.NSProviderInfo[]
   spec.crmscript:
-  - uid: CRMScript.Native.ProviderInfo
+  - uid: CRMScript.NetServer.NSProviderInfo
     isExternal: true
-    name: ProviderInfo
-    nameWithType: ProviderInfo
-    fullName: CRMScript.Native.ProviderInfo
+    name: NSProviderInfo
+    nameWithType: NSProviderInfo
+    fullName: CRMScript.NetServer.NSProviderInfo
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Native.ProviderInfo
-  commentId: T:CRMScript.Native.ProviderInfo
+- uid: CRMScript.NetServer.NSProviderInfo
+  commentId: T:CRMScript.NetServer.NSProviderInfo
   isExternal: true
-  name: ProviderInfo
-  nameWithType: ProviderInfo
-  fullName: CRMScript.Native.ProviderInfo
+  name: NSProviderInfo
+  nameWithType: NSProviderInfo
+  fullName: CRMScript.NetServer.NSProviderInfo
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
