--- a/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
@@ -105,13 +105,13 @@ items:
   summary: ""
   remarks: 
   syntax: 
-    content: DataRights GetDataRights()
+    content: NSDataRights GetDataRights()
     parameters: []
     return:
-      type: CRMScript.Native.DataRights
+      type: CRMScript.NetServer.NSDataRights
       description: Data rights matrix, defines role's access to data owned by current user, users in same group, and other users.
   example: 
-  - "\n<pre><code>NSRoleEntity thing;\nDataRights dataRights = thing.GetDataRights();</code></pre>\n"
+  - "\n<pre><code>NSRoleEntity thing;\nNSDataRights dataRights = thing.GetDataRights();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRoleEntity.GetDeleted()
   commentId: M:CRMScript.NetServer.NSRoleEntity.GetDeleted()
   id: 'GetDeleted()'
