--- a/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
@@ -621,12 +621,12 @@ items:
   summary: ""
   remarks: 
   syntax: 
-    content: SelectionCategory GetSelectionCategory()
+    content: NSSelectionCategory GetSelectionCategory()
     parameters: []
     return:
-      type: CRMScript.Native.SelectionCategory
+      type: CRMScript.NetServer.NSSelectionCategory
   example: 
-  - "\n<pre><code>NSSelectionEntity thing;\nSelectionCategory selectionCategory = thing.GetSelectionCategory();</code></pre>\n"
+  - "\n<pre><code>NSSelectionEntity thing;\nNSSelectionCategory selectionCategory = thing.GetSelectionCategory();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionEntity.GetSelectionId()
   commentId: M:CRMScript.NetServer.NSSelectionEntity.GetSelectionId()
   id: 'GetSelectionId()'
