--- a/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
@@ -371,15 +371,15 @@ items:
   summary: "\nGets multiple tickets\n"
   remarks: 
   syntax: 
-    content: Ticket[] GetTickets(Integer[] ticketIds)
+    content: NSTicket[] GetTickets(Integer[] ticketIds)
     parameters:
     - id: ticketIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
-      type: CRMScript.Native.Ticket[]
+      type: CRMScript.NetServer.NSTicket[]
   example: 
-  - "\n<pre><code>NSTicketAgent agent;\nInteger[] ticketIds;\nTicket[] res = agent.GetTickets(ticketIds);</code></pre>\n"
+  - "\n<pre><code>NSTicketAgent agent;\nInteger[] ticketIds;\nNSTicket[] res = agent.GetTickets(ticketIds);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketAgent.Html2Text(String)
   commentId: M:CRMScript.NetServer.NSTicketAgent.Html2Text(String)
   id: 'Html2Text(String)'
@@ -682,12 +682,6 @@ references:
   name: NSTicketAgent
   nameWithType: NSTicketAgent
   fullName: CRMScript.NetServer.NSTicketAgent
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
 - uid: CRMScript.Global.Integer[]
   isExternal: true
   name: Integer[]
@@ -708,12 +702,6 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.Void
-  commentId: T:CRMScript.Global.Void
-  isExternal: true
-  name: Void
-  nameWithType: Void
-  fullName: CRMScript.Global.Void
 - uid: CRMScript.NetServer.NSAttachmentEntity
   commentId: T:CRMScript.NetServer.NSAttachmentEntity
   isExternal: true
@@ -758,44 +746,32 @@ references:
   name: NSStream
   nameWithType: NSStream
   fullName: CRMScript.NetServer.NSStream
-- uid: CRMScript.NetServer.NSTicket
-  commentId: T:CRMScript.NetServer.NSTicket
-  isExternal: true
-  name: NSTicket
-  nameWithType: NSTicket
-  fullName: CRMScript.NetServer.NSTicket
 - uid: CRMScript.NetServer.NSTicketMessage
   commentId: T:CRMScript.NetServer.NSTicketMessage
   isExternal: true
   name: NSTicketMessage
   nameWithType: NSTicketMessage
   fullName: CRMScript.NetServer.NSTicketMessage
-- uid: CRMScript.Native.Ticket[]
+- uid: CRMScript.NetServer.NSTicket[]
   isExternal: true
-  name: Ticket[]
-  nameWithType: Ticket[]
-  fullName: CRMScript.Native.Ticket[]
+  name: NSTicket[]
+  nameWithType: NSTicket[]
+  fullName: CRMScript.NetServer.NSTicket[]
   spec.crmscript:
-  - uid: CRMScript.Native.Ticket
+  - uid: CRMScript.NetServer.NSTicket
     isExternal: true
-    name: Ticket
-    nameWithType: Ticket
-    fullName: CRMScript.Native.Ticket
+    name: NSTicket
+    nameWithType: NSTicket
+    fullName: CRMScript.NetServer.NSTicket
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Native.Ticket
-  commentId: T:CRMScript.Native.Ticket
+- uid: CRMScript.NetServer.NSTicket
+  commentId: T:CRMScript.NetServer.NSTicket
   isExternal: true
   name: Ticket
   nameWithType: Ticket
-  fullName: CRMScript.Native.Ticket
-- uid: CRMScript.Global.String
-  commentId: T:CRMScript.Global.String
-  isExternal: true
-  name: String
-  nameWithType: String
-  fullName: CRMScript.Global.String
+  fullName: CRMScript.NetServer.NSTicket
 - uid: CRMScript.Global.String[]
   isExternal: true
   name: String[]
