--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
@@ -214,7 +214,7 @@ items:
     content: Integer GetFlags()
     parameters: []
     return:
-      type: CRMScript.Native.Integer
+      type: CRMScript.Global.Integer
       description: A bitmask representing flags for this category. See <xref href=\"CRMScript.NetServer.TicketCategoryFlags\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketCategoryEntity thing;\nInteger flags = thing.GetFlags();</code></pre>\n"
@@ -709,12 +709,6 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Native.Integer
-  commentId: T:CRMScript.Native.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Native.Integer
 - uid: CRMScript.NetServer.ChatSessionFlags
   commentId: T:CRMScript.NetServer.ChatSessionFlags
   isExternal: true
