--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -2015,18 +2015,6 @@ references:
   name: NSTicketMessage
   nameWithType: NSTicketMessage
   fullName: CRMScript.NetServer.NSTicketMessage
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
-- uid: CRMScript.NetServer.NSPerson
-  commentId: T:CRMScript.NetServer.NSPerson
-  isExternal: true
-  name: NSPerson
-  nameWithType: NSPerson
-  fullName: CRMScript.NetServer.NSPerson
 - uid: CRMScript.NetServer.NSTicketPriorityEntity
   commentId: T:CRMScript.NetServer.NSTicketPriorityEntity
   isExternal: true
@@ -2053,23 +2041,17 @@ references:
   name: NSPerson
   nameWithType: NSPerson
   fullName: CRMScript.NetServer.NSPerson
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
 - uid: CRMScript.NetServer.NSTicketStatusEntity
   commentId: T:CRMScript.NetServer.NSTicketStatusEntity
   isExternal: true
   name: NSTicketStatusEntity
   nameWithType: NSTicketStatusEntity
   fullName: CRMScript.NetServer.NSTicketStatusEntity
-- uid: CRMScript.Native.NSTag[]
+- uid: CRMScript.NetServer.NSTag[]
   isExternal: true
   name: NSTag[]
   nameWithType: NSTag[]
-  fullName: CRMScript.Native.NSTag[]
+  fullName: CRMScript.NetServer.NSTag[]
   spec.crmscript:
   - uid: CRMScript.NetServer.NSTag
     isExternal: true
